--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase-admin": "^10.0.2",
     "mcapi": "^1.0.1",
     "nodejs": "^0.0.0",
-    "three": "^0.138.3"
+    "three": "^0.138.3",
+    "three.js": "^0.77.0"
   }
 }
